# adversary-intel

./: .env.example  .gitignore  README.md  pyproject.toml
adversary_intel/: cli.py  config.py  models.py
adversary_intel/api/: main.py
adversary_intel/core/: favicon.py  http_fp.py  jarm.py  passive_dns.py  tls_cert.py
adversary_intel/detection/: nuclei.py  sigma.py
adversary_intel/feeds/: abusech.py  anomali.py  base.py  misp.py  opencti.py  otx.py  securitytrails.py
adversary_intel/graph/: infra_graph.py
adversary_intel/intel/: asn.py  virustotal.py  whois.py
adversary_intel/reporting/: __init__.py  ioc_export.py
adversary_intel/scanning/: censys.py  crtsh.py  shodan.py
adversary_intel/workflows/: c2_hunt.py
output/hunts/45_142_212_31/: iocs.csv  iocs_malicious.txt  misp_event.json  nuclei_vpnplus_cluster.yaml  report.json  sigma_vpnplus_cluster.yml  stix_bundle.json
templates/nuclei/: cobalt_strike_multi_signal.yaml  sliver_c2_detection.yaml
templates/sigma/: cobalt_strike_jarm.yml  ja3_c2_detection.yml
tests/: test_favicon.py  test_graph.py  test_jarm.py  test_sigma.py
